Migrations und anderer Stufff

--- a/App/ServerAppSchule/Shared/LoginDisplay.razor
+++ b/App/ServerAppSchule/Shared/LoginDisplay.razor
@@ -1,14 +1,5 @@
 ﻿<AuthorizeView>
     <Authorized> 
-        <form method="post" action="Identity/Account/LogOut">
-            <MudButton 
-                ButtonType="ButtonType.Submit" 
-                StartIcon="@Icons.Material.Filled.Logout" 
-                IconColor="Color.Error"
-                Color="Color.Error"
-                Variant="Variant.Text">
-                Abmelden
-            </MudButton>
-        </form>
+        <ProfileSlim/>
     </Authorized>
 </AuthorizeView>
