--- a/App/ServerAppSchule/Shared/NavMenu.razor
+++ b/App/ServerAppSchule/Shared/NavMenu.razor
@@ -10,4 +10,9 @@
             <MudNavLink Href="/userAdmininstration" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">Benutzer Verwalten</MudNavLink>
         </Authorized>
     </AuthorizeView>
+    <AuthorizeView>
+        <Authorized>
+            <MudNavLink Href="/settings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Einstellungen</MudNavLink>
+        </Authorized>
+    </AuthorizeView>
 </MudNavMenu>
