--- a/App/ServerAppSchule/Components/User.razor
+++ b/App/ServerAppSchule/Components/User.razor
@@ -1,14 +1,18 @@
 ﻿<MudContainer>
-    <MudTextField T="string"
-        @bind-Value="_usr.UserName"
-        Label="Benutzername"
-        ReadOnly/>
-     <MudTextField T="string"
-        @bind-Value="_usr.Role"
-        Label="Berechtigung"
-        ReadOnly />
-    <MudDivider />
-    <MudAvatar>
-        <MudImage Src="@usrSettings.ProfilePicture"></MudImage>
-    </MudAvatar>
+    <MudGrid>
+        <MudItem xs="12" md="8">
+            <MudTextField T="string"
+                @bind-Value="_usr.UserName"
+                Label="Benutzername"
+                ReadOnly />
+             <MudTextField T="string"
+                @bind-Value="_usr.Role"
+                Label="Berechtigung"
+                ReadOnly />
+        </MudItem>
+        <MudItem xs="12" md="4">
+            <MudImage 
+                Src="@usrSettings.ProfilePicture"/>
+        </MudItem>
+    </MudGrid>
 </MudContainer>
