anpassung Script + Layout Login und user profilepicture

--- a/App/ServerAppSchule/Components/ProfileSlim.razor
+++ b/App/ServerAppSchule/Components/ProfileSlim.razor
@@ -8,7 +8,7 @@
         else
         {
             <MudAvatar Color="Color.Surface" Size="Size.Medium">
-                <MudImage Src="@_shortName"></MudImage>
+                <MudImage Src="@_profilePic"></MudImage>
             </MudAvatar>
         }
     </ActivatorContent>
