--- a/App/ServerAppSchule/Pages/UserAdministration.razor
+++ b/App/ServerAppSchule/Pages/UserAdministration.razor
@@ -19,23 +19,19 @@
         </MudButton>
     </ToolBarContent>
     <HeaderContent>
-@*         <MudTh><MudTableSortLabel SortBy="new Func<UserSlim, object>(x=>x.FirstName)">Vorname</MudTableSortLabel></MudTh>
-        <MudTh><MudTableSortLabel SortBy="new Func<UserSlim, object>(x=>x.LastName)">Nachname</MudTableSortLabel></MudTh> *@
         <MudTh><MudTableSortLabel SortBy="new Func<UserSlim, object>(x=>x.Username)">Benutzername</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<UserSlim, object>(x=>x.Email)">E-Mail</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<UserSlim, object>(x=>x.Role)">Berechtigung</MudTableSortLabel></MudTh>
         <MudTh></MudTh>
     </HeaderContent>
     <RowTemplate>
-@*         <MudTd DataLabel="Vorname">@context.FirstName</MudTd>
-        <MudTd DataLabel="Nachname">@context.LastName</MudTd> *@
         <MudTd DataLabel="Benutzername">@context.Username</MudTd>
         <MudTd DataLabel="E-Mail">@context.Email</MudTd>
         <MudTd DataLabel="Berechtigung">@context.Role</MudTd>
-        <MudTd>
+@*         <MudTd>
             <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Edit"  Size="Size.Small"/>
             <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Delete" Size="Size.Small"/>
-        </MudTd>
+        </MudTd> *@
     </RowTemplate>  
     <PagerContent>
         <MudTablePager PageSizeOptions="new int[]{10,25,50}" />
@@ -58,14 +54,12 @@
     protected override async Task OnInitializedAsync()
     {
         _slimmedUserList = await _userService.GetAllMappedUsersAsync();
-        _roles = _roleService.GetNonAdminRoleNames();
+        _roles = _roleService.GetRoleNames();
         base.OnInitialized();
     }
     void OnAddClicked()
     {
         _userToEdit = new RegisterUser();
         _dialogService.Show<CreateOrEditUser>();
-        
-
     }
 }
