Password Change option
Zwischenstand abspeichern

--- a/App/ServerAppSchule/Components/SettingsUser.razor
+++ b/App/ServerAppSchule/Components/SettingsUser.razor
@@ -24,7 +24,8 @@
                             </MudButton>
                 </ButtonTemplate>
              </MudFileUpload>
-           
         </MudItem>
     </MudGrid>
+     <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="OpenDialog">Passwort ändern</MudButton>
 </MudContainer>
+ @* <ChangePasswordDialog uid="@uid" /> *@
