--- a/App/ServerAppSchule/Pages/Settings.razor
+++ b/App/ServerAppSchule/Pages/Settings.razor
@@ -10,7 +10,7 @@
             </MudText>
         </TitleContent>
         <ChildContent>
-            <User uid="@_uid" usrSettings="@_usrSettings"/>
+            <SettingsUser uid="@_uid" usrSettings="@_usrSettings"/>
         </ChildContent>
     </MudExpansionPanel>
 </MudExpansionPanels>
