--- a/App/ServerAppSchule/Pages/Index.razor
+++ b/App/ServerAppSchule/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @page "/home"
+@using System.Security.Claims;
 @inject NavigationManager _navManager
 <PageTitle>Index</PageTitle>
 
@@ -10,6 +11,8 @@
 @code {
     [CascadingParameter]
     Task<AuthenticationState> _authenticationState { get; set; }
+    [Inject]
+    IUserService _userService { get; set; }
     protected override async Task OnInitializedAsync()
     {
         var currentauth = await _authenticationState;
@@ -17,5 +20,6 @@
         {
             _navManager.NavigateTo("/login", true);
         }
+        await _userService.UpdateLastLoginRefresh(currentauth.User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier).Value);
     }
 }
