--- a/App/ServerAppSchule/Pages/UserAdministration.razor
+++ b/App/ServerAppSchule/Pages/UserAdministration.razor
@@ -1,5 +1,5 @@
 ﻿@page "/userAdmininstration"
-@using ServerAppSchule.Services
+@using ServerAppSchule.Interfaces
 
 <MudTable 
     Items="@_slimmedUserList" 
