--- a/App/ServerAppSchule/_Imports.razor
+++ b/App/ServerAppSchule/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.JSInterop
 @using MudBlazor
 
@@ -16,3 +17,4 @@
 @using ServerAppSchule.Models
 @using ServerAppSchule.Data
 @using ServerAppSchule.Components
+@using ServerAppSchule.Interfaces
