--- a/App/ServerAppSchule/Pages/UserAdministration.razor
+++ b/App/ServerAppSchule/Pages/UserAdministration.razor
@@ -1,5 +1,6 @@
 ﻿@page "/userAdmininstration"
 @using ServerAppSchule.Interfaces
+@using System.Security.Claims;
 
 <MudTable 
     Items="@_slimmedUserList" 
@@ -28,18 +29,17 @@
         <MudTd DataLabel="Benutzername">@context.Username</MudTd>
         <MudTd DataLabel="E-Mail">@context.Email</MudTd>
         <MudTd DataLabel="Berechtigung">@context.Role</MudTd>
-@*         <MudTd>
-            <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Edit"  Size="Size.Small"/>
-            <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Delete" Size="Size.Small"/>
-        </MudTd> *@
+        <MudTd>
+            @if(context.Id == _uid || _role == "Admin")
+            {
+                <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Edit" Size="Size.Small" OnClick="@(() => OpenChangePassword(context))" />
+            }   
+        </MudTd>
     </RowTemplate>  
     <PagerContent>
         <MudTablePager PageSizeOptions="new int[]{10,25,50}" />
     </PagerContent>
 </MudTable>
-@* <CreateOrEditUser 
-    InputUser="@_userToEdit" 
-    _roles="@_roles"/> *@
 
 @code {
     [Inject] 
@@ -48,15 +48,31 @@
     private IRoleService _roleService { get; set; }
     [Inject] 
     private IDialogService _dialogService { get; set; }
+    [Inject]
+    private NavigationManager _navManager { get; set; }
+    [CascadingParameter]
+    Task<AuthenticationState> _authenticationState { get; set; }
     IEnumerable<UserSlim> _slimmedUserList = new List<UserSlim>();
     RegisterUser _userToEdit = new();
     List<string> _roles;
+    string _role = string.Empty;
+    string _uid = string.Empty;
     protected override async Task OnInitializedAsync()
     {
+        var currentauth = await _authenticationState;
+        _role = currentauth.User.Claims.FirstOrDefault(x => x.Type == "http://schemas.microsoft.com/ws/2008/06/identity/claims/role")?.Value;
+        _uid = currentauth.User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier).Value;
+        if (!currentauth.User.Identity.IsAuthenticated && _role == "Admin")
+        {
+            _navManager.NavigateTo("/login", true);
+        }
         _slimmedUserList = await _userService.GetAllMappedUsersAsync();
         _roles = _roleService.GetRoleNames();
         base.OnInitialized();
     }
+    /// <summary>
+    /// Öffnet einen Dialog um einen neuen Benutzer hinzuzufügen
+    /// </summary>
     void OnAddClicked()
     {
         _userToEdit = new RegisterUser();
@@ -64,5 +80,15 @@
         parameters.Add(x => x.InputUser, _userToEdit);
         parameters.Add(x => x._roles, _roles);
         _dialogService.Show<CreateOrEditUser>();
+    }
+    /// <summary>
+    /// Öffnet das Dialogfenster zum Ändern des Passworts
+    /// </summary>
+    void OpenChangePassword(UserSlim user)
+    {
+        DialogParameters<ChangePasswordDialog> parameters = new DialogParameters<ChangePasswordDialog>();
+        parameters.Add(x => x.uid, user.Id);
+        _dialogService.Show<ChangePasswordDialog>("Passwort Ändern", parameters);
+
     }
 }
