--- a/App/ServerAppSchule/Pages/Settings.razor
+++ b/App/ServerAppSchule/Pages/Settings.razor
@@ -13,4 +13,15 @@
             <SettingsUser uid="@_uid" usrSettings="@_usrSettings"/>
         </ChildContent>
     </MudExpansionPanel>
+    <MudExpansionPanel>
+        <TitleContent>
+            <MudText Typo="Typo.h6">
+                <MudIcon Icon="@Icons.Material.Filled.ColorLens" />
+                Design
+            </MudText>
+        </TitleContent>
+        <ChildContent>
+            <SettingsDesign UsrSettings="@_usrSettings"/>
+        </ChildContent>
+    </MudExpansionPanel>
 </MudExpansionPanels>
