--- a/App/ServerAppSchule/Pages/UserAdministration.razor
+++ b/App/ServerAppSchule/Pages/UserAdministration.razor
@@ -60,12 +60,12 @@
     protected override async Task OnInitializedAsync()
     {
         var currentauth = await _authenticationState;
-        _role = currentauth.User.Claims.FirstOrDefault(x => x.Type == "http://schemas.microsoft.com/ws/2008/06/identity/claims/role")?.Value;
-        _uid = currentauth.User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier).Value;
-        if (!currentauth.User.Identity.IsAuthenticated && _role == "Admin")
+        _role = currentauth.User.Claims.FirstOrDefault(x => x.Type == "http://schemas.microsoft.com/ws/2008/06/identity/claims/role")?.Value;    
+        if (!currentauth.User.Identity.IsAuthenticated && _role != "Admin")
         {
             _navManager.NavigateTo("/login", true);
         }
+        _uid = currentauth.User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier).Value;
         _slimmedUserList = await _userService.GetAllMappedUsersAsync();
         _roles = _roleService.GetRoleNames();
         base.OnInitialized();
